<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="S2_Global" Id="{f2ca5b31-1de6-4f3f-a24a-982c8035197d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Data: typeStationMode;
	hmiHeader:typeHMIheader;
	
	
	//all motion rows in the station, to be inserted into the main HMI motion screen
	MotionRow: ARRAY[1..99] OF typeMotionRow;
	MotionRowBtn: ARRAY[1..99] OF typeMotionRowButtons;
	

END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>