<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="prgAfterStationScan" Id="{1a47d8fd-3e5d-4193-839a-5a5ee306ddc2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM prgAfterStationScan
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//theme:ldUT4FLxql4
//call at the end of scan of stations..
//..for data to be processed after all values of a station
actAnyAlarmsGlobal();
]]></ST>
    </Implementation>
    <Action Name="actAnyAlarmsGlobal" Id="{976dde39-5720-4a2c-860b-750f4fc28559}">
      <Implementation>
        <ST><![CDATA[//call for end of scan
//if any station has fault state, then set logic for all stations...
//writes to data multiple times due to manipulation of scan
IF 
	S1_Global.hmiHeader.isFaultState OR 
	S2_Global.hmiHeader.isFaultState OR 
	S3_Global.hmiHeader.isFaultState OR 
	S4_Global.hmiHeader.isFaultState OR 
	S5_Global.hmiHeader.isFaultState OR 
	S6_Global.hmiHeader.isFaultState OR
	GlobalMessages.gMsgMcStat.IsAlarm
THEN
	S1_Global.hmiHeader.AnyStationFaultHeaderActive := System.OneSecond;
	S2_Global.hmiHeader.AnyStationFaultHeaderActive := System.OneSecond;
	S3_Global.hmiHeader.AnyStationFaultHeaderActive := System.OneSecond;
	S4_Global.hmiHeader.AnyStationFaultHeaderActive := System.OneSecond;
	S5_Global.hmiHeader.AnyStationFaultHeaderActive := System.OneSecond;
	S6_Global.hmiHeader.AnyStationFaultHeaderActive := System.OneSecond;
ELSE
	S1_Global.hmiHeader.AnyStationFaultHeaderActive := FALSE;
	S2_Global.hmiHeader.AnyStationFaultHeaderActive := FALSE;
	S3_Global.hmiHeader.AnyStationFaultHeaderActive := FALSE;
	S4_Global.hmiHeader.AnyStationFaultHeaderActive := FALSE;
	S5_Global.hmiHeader.AnyStationFaultHeaderActive := FALSE;
	S6_Global.hmiHeader.AnyStationFaultHeaderActive := FALSE;	
END_IF

//set indicators to 0
	S1_Global.hmiHeader.AnyStationFaultHeader := 0;
	S2_Global.hmiHeader.AnyStationFaultHeader := 0;
	S3_Global.hmiHeader.AnyStationFaultHeader := 0;
	S4_Global.hmiHeader.AnyStationFaultHeader := 0;
	S5_Global.hmiHeader.AnyStationFaultHeader := 0;
	S6_Global.hmiHeader.AnyStationFaultHeader := 0;



//write station 1 is in fault
IF 	S1_Global.hmiHeader.isFaultState THEN
	S1_Global.hmiHeader.AnyStationFaultHeader := 1;
	S2_Global.hmiHeader.AnyStationFaultHeader := 1;
	S3_Global.hmiHeader.AnyStationFaultHeader := 1;
	S4_Global.hmiHeader.AnyStationFaultHeader := 1;
	S5_Global.hmiHeader.AnyStationFaultHeader := 1;
	S6_Global.hmiHeader.AnyStationFaultHeader := 1;
END_IF

//write station 2 is in fault
IF 	S2_Global.hmiHeader.isFaultState THEN
	S1_Global.hmiHeader.AnyStationFaultHeader := 2;
	S2_Global.hmiHeader.AnyStationFaultHeader := 2;
	S3_Global.hmiHeader.AnyStationFaultHeader := 2;
	S4_Global.hmiHeader.AnyStationFaultHeader := 2;
	S5_Global.hmiHeader.AnyStationFaultHeader := 2;
	S6_Global.hmiHeader.AnyStationFaultHeader := 2;
END_IF

//write station 3 is in fault
IF 	S3_Global.hmiHeader.isFaultState THEN
	S1_Global.hmiHeader.AnyStationFaultHeader := 3;
	S2_Global.hmiHeader.AnyStationFaultHeader := 3;
	S3_Global.hmiHeader.AnyStationFaultHeader := 3;
	S4_Global.hmiHeader.AnyStationFaultHeader := 3;
	S5_Global.hmiHeader.AnyStationFaultHeader := 3;
	S6_Global.hmiHeader.AnyStationFaultHeader := 3;
END_IF

//write station 4 is in fault
IF 	S4_Global.hmiHeader.isFaultState THEN
	S1_Global.hmiHeader.AnyStationFaultHeader := 4;
	S2_Global.hmiHeader.AnyStationFaultHeader := 4;
	S3_Global.hmiHeader.AnyStationFaultHeader := 4;
	S4_Global.hmiHeader.AnyStationFaultHeader := 4;
	S5_Global.hmiHeader.AnyStationFaultHeader := 4;
	S6_Global.hmiHeader.AnyStationFaultHeader := 4;
END_IF

//write station 5 is in fault
IF 	S5_Global.hmiHeader.isFaultState THEN
	S1_Global.hmiHeader.AnyStationFaultHeader := 5;
	S2_Global.hmiHeader.AnyStationFaultHeader := 5;
	S3_Global.hmiHeader.AnyStationFaultHeader := 5;
	S4_Global.hmiHeader.AnyStationFaultHeader := 5;
	S5_Global.hmiHeader.AnyStationFaultHeader := 5;
	S6_Global.hmiHeader.AnyStationFaultHeader := 5;
END_IF

//write station 6 is in fault
IF 	S6_Global.hmiHeader.isFaultState THEN
	S1_Global.hmiHeader.AnyStationFaultHeader := 6;
	S2_Global.hmiHeader.AnyStationFaultHeader := 6;
	S3_Global.hmiHeader.AnyStationFaultHeader := 6;
	S4_Global.hmiHeader.AnyStationFaultHeader := 6;
	S5_Global.hmiHeader.AnyStationFaultHeader := 6;
	S6_Global.hmiHeader.AnyStationFaultHeader := 6;
END_IF

//..so it appears in all usage of the HMI for a given station

//add for base station header
IF GlobalMessages.gMsgMcStat.IsAlarm THEN
	//set special case for base machine
	S1_Global.hmiHeader.AnyStationFaultHeader := 99;
	S2_Global.hmiHeader.AnyStationFaultHeader := 99;
	S3_Global.hmiHeader.AnyStationFaultHeader := 99;
	S4_Global.hmiHeader.AnyStationFaultHeader := 99;
	S5_Global.hmiHeader.AnyStationFaultHeader := 99;
	S6_Global.hmiHeader.AnyStationFaultHeader := 99;
	
	S1_Global.hmiHeader.isFaultState := TRUE;
	S2_Global.hmiHeader.isFaultState := TRUE;
	S3_Global.hmiHeader.isFaultState := TRUE;
	S4_Global.hmiHeader.isFaultState := TRUE;
	S5_Global.hmiHeader.isFaultState := TRUE;
	S6_Global.hmiHeader.isFaultState := TRUE;
	
	S1_Global.hmiHeader.FaultStateHeader := 1;
	S2_Global.hmiHeader.FaultStateHeader := 1;
	S3_Global.hmiHeader.FaultStateHeader := 1;
	S4_Global.hmiHeader.FaultStateHeader := 1;
	S5_Global.hmiHeader.FaultStateHeader := 1;
	S6_Global.hmiHeader.FaultStateHeader := 1;
END_IF]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="prgAfterStationScan">
      <LineId Id="11" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="6" Count="1" />
    </LineIds>
    <LineIds Name="prgAfterStationScan.actAnyAlarmsGlobal">
      <LineId Id="1" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="15" Count="4" />
      <LineId Id="139" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="22" Count="4" />
      <LineId Id="29" Count="0" />
      <LineId Id="32" Count="4" />
      <LineId Id="30" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="120" Count="1" />
      <LineId Id="124" Count="4" />
      <LineId Id="123" Count="0" />
      <LineId Id="122" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="38" Count="2" />
      <LineId Id="46" Count="0" />
      <LineId Id="48" Count="4" />
      <LineId Id="47" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="56" Count="7" />
      <LineId Id="55" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="65" Count="6" />
      <LineId Id="109" Count="1" />
      <LineId Id="115" Count="0" />
      <LineId Id="111" Count="1" />
      <LineId Id="76" Count="5" />
      <LineId Id="73" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="83" Count="7" />
      <LineId Id="82" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="92" Count="7" />
      <LineId Id="91" Count="0" />
      <LineId Id="118" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="134" Count="4" />
      <LineId Id="132" Count="0" />
      <LineId Id="141" Count="6" />
      <LineId Id="149" Count="6" />
      <LineId Id="133" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>